--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Team_Project">
         <activity
+            android:name=".tkbieu_Activity"
+            android:exported="true" />
+        <activity
             android:name=".homepage_Activity"
             android:exported="true" />
         <activity
             android:name=".Mic_Login"
             android:exported="true" />
         <activity
-            android:name=".Splash"
+            android:name=".LopHocPhan"
             android:exported="true" />
         <activity
-            android:name=".LopHocPhan"
+            android:name=".Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
