--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             android:exported="true" />
         <activity
             android:name=".tkbieu_Activity"
-
-      <activity
+            android:exported="true"/>
+        <activity
             android:name=".Change_Completed"
             android:exported="true" />
         <activity
@@ -41,7 +41,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
