--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logoute"
-        android:label="UTE APP"
+        android:label="UTE "
 
         android:supportsRtl="true"
         android:theme="@style/Theme.Team_Project">
