--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.team_project">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/logoute"
         android:label="UTE "
 
         android:supportsRtl="true"
-        android:theme="@style/Theme.Team_Project">
+        android:theme="@style/Theme.Team_Project"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activity_Lichthi"
             android:exported="true" />
@@ -28,7 +30,7 @@
             android:name=".Forgot"
             android:exported="true" />
         <activity
-            android:name=".homepage_Activity"
+            android:name=".Splash"
             android:exported="true" />
         <activity
             android:name=".Mic_Login"
@@ -37,7 +39,7 @@
             android:name=".LopHocPhan"
             android:exported="true" />
         <activity
-            android:name=".Splash"
+            android:name=".homepage_Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
