--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.team_project">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logoute"
         android:label="UTE "
-
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.Team_Project"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".userList"
+            android:exported="true" />
         <activity
             android:name=".activity_Lichthi"
             android:exported="true" />
@@ -19,14 +23,14 @@
             android:exported="true" />
         <activity
             android:name=".tkbieu_Activity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".Change_Completed"
             android:exported="true" />
         <activity
             android:name=".New_Password"
             android:exported="true" />
-      <activity
+        <activity
             android:name=".Forgot"
             android:exported="true" />
         <activity
@@ -43,15 +47,26 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".firebase.MessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".MainActivity"
             android:exported="true" />
         <activity
             android:name=".chatbox_details_Activity"
-            android:exported="true" />
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".notification_details_Activity"
             android:exported="true" />
