--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.team_project">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/logoute"
         android:label="UTE "
-
         android:supportsRtl="true"
-        android:theme="@style/Theme.Team_Project">
+        android:theme="@style/Theme.Team_Project"
+        android:usesCleartextTraffic="true"
+        >
         <activity
             android:name=".activity_Lichthi"
             android:exported="true" />
