--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".activity_ketqua"
             android:exported="true" />
         <activity
-            android:name=".tkbieu_Activity"
+            android:name=".ThoiKhoaBieu_Module.tkbieu_Activity"
             android:exported="true" />
         <activity
             android:name=".Change_Completed"
