--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Team_Project"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ThongTinChiTietLhpActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChatModule.userList"
             android:exported="true" />
         <activity
